NLP TP/texts/robotics/robotics.stackexchange_0000053827.txt
Q:

rqt_gui_py.plugin PushButton event error

Hi all.
I have designed a very basic gui in QT5 designer. It consists of some pushbuttons. One of them has the quit event (name = quit).
void awc_gui::on_quit_clicked()
{
    qApp->quit();
}

This gui works fine in Qt5, but when I export the .ui file to my ~/catkin_ws/src/rqt_awc/resource$ folder
I can load the plugin in rqt, however the event doest work.
I have been taken a look at some examples and I have tried the following in my plugin.py file
   self._widget.quit.click.connect(self._on_quit_click)
   def _on_quit_click(self):
       self._widget.quit.quit()

I open the rqt after I have compiled the package with catkin_make in the catkin working space.
Then I get the following error:
 self._widget.quit.click.connect(self._on_quit_click)
                                                 ^
IndentationError: unindent does not match any outer indentation level

To be sincere I have no clue, any help will be appreciate it, and in advance thank you.

Originally posted by acp on ROS Answers with karma: 556 on 2013-09-03
Post score: 0

A:

I got it work, I just have followed the plugin example in: https://github.com/ros-visualization/rqt_robot_plugins/blob/hydro-devel/rqt_robot_steering/src/rqt_robot_steering/robot_steering.py The tutorials are good but still they are missing some things, and definitely they can be improved.  So as a beginner I recommend to follow the tutorial and use the robot.steering.py as an example and qt designer to create the .ui

Originally posted by acp with karma: 556 on 2013-09-03
This answer was ACCEPTED on the original site
Post score: 0

